--- a/AssetImporter/AssetImporter.vcxproj
+++ b/AssetImporter/AssetImporter.vcxproj
@@ -49,7 +49,7 @@
     <UseDebugLibraries>false</UseDebugLibraries>
     <PlatformToolset>v141</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
-    <CharacterSet>MultiByte</CharacterSet>
+    <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
@@ -78,7 +78,9 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <IntDir>$(Platform)\$(Configuration)\</IntDir>
-    <IncludePath>$(SolutionDir)Jae3d;$(VC_IncludePath);$(WindowsSDK_IncludePath);</IncludePath>
+    <IncludePath>$(ASSIMP_HOME)\include;$(DIRECTXTEX_HOME);$(SolutionDir)Jae3d;$(FREETYPE_HOME)\include;$(IncludePath)</IncludePath>
+    <ExecutablePath>$(ASSIMP_HOME)\bin\x64;$(ExecutablePath)</ExecutablePath>
+    <LibraryPath>$(ASSIMP_HOME)\lib\x64;$(DIRECTXTEX_HOME)\Bin\Desktop_2017_Win10\x64\Release;$(FREETYPE_HOME)\win64;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <OutDir>$(SolutionDir)$(Platform)\$(Configuration)\</OutDir>
@@ -155,8 +157,8 @@
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>assimp-vc140-mt.lib;DirectXTex.lib;d3d12.lib;dxgi.lib;d3dcompiler.lib;Jae3d.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>$(ASSIMP_HOME)\lib\x64;$(DIRECTXTEX_HOME)\Bin\Desktop_2017_Win10\x64\Debug;$(OutDir)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>assimp-vc140-mt.lib;DirectXTex.lib;d3d12.lib;dxgi.lib;d3dcompiler.lib;Jae3d.lib;freetype.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(ASSIMP_HOME)\lib\x64;$(DIRECTXTEX_HOME)\Bin\Desktop_2017_Win10\x64\Release;$(FREETYPE_HOME)\win64;$(OutDir)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
@@ -188,12 +190,21 @@
     <ClInclude Include="Viewport.hpp" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="..\Assets\Core\Core.hlsli" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Jae3d\Jae3d.vcxproj">
       <Project>{8e825bbe-6fb0-4ff4-b407-015f4c9ab372}</Project>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="..\Assets\Core\Colored.hlsl">
+      <FileType>Document</FileType>
+    </None>
+    <None Include="..\Assets\Core\LightCompute.hlsl">
+      <FileType>Document</FileType>
+    </None>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
