--- a/Jae3d/Jae3d.vcxproj
+++ b/Jae3d/Jae3d.vcxproj
@@ -49,7 +49,7 @@
     <UseDebugLibraries>false</UseDebugLibraries>
     <PlatformToolset>v141</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
-    <CharacterSet>MultiByte</CharacterSet>
+    <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
@@ -280,7 +280,6 @@
     <ClCompile Include="Profiler.cpp" />
     <ClCompile Include="Scene.cpp" />
     <ClCompile Include="SpriteBatch.cpp" />
-    <ClCompile Include="SRVBuffer.cpp" />
     <ClCompile Include="Texture.cpp" />
     <ClCompile Include="Window.cpp" />
     <ClCompile Include="Shader.cpp" />
@@ -316,19 +315,28 @@
     <ClInclude Include="Mesh.hpp" />
     <ClInclude Include="MeshRenderer.hpp" />
     <ClInclude Include="Object.hpp" />
+    <ClInclude Include="Octree.hpp" />
     <ClInclude Include="Profiler.hpp" />
     <ClInclude Include="Renderer.hpp" />
     <ClInclude Include="Scene.hpp" />
     <ClInclude Include="SpriteBatch.hpp" />
-    <ClInclude Include="SRVBuffer.hpp" />
     <ClInclude Include="Texture.hpp" />
     <ClInclude Include="Window.hpp" />
     <ClInclude Include="Shader.hpp" />
     <ClInclude Include="Util.hpp" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="CoreAssets\Common.hlsli" />
     <None Include="dds\GenerateMips_main.inc" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="CoreAssets\Colored.hlsl">
+      <FileType>Document</FileType>
+    </None>
+    <None Include="CoreAssets\LightCompute.hlsl">
+      <FileType>Document</FileType>
+    </None>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
